# bluealsa-simple-handsfree

./: LICENSE  README.md  bluealsa-handsfree-audio.bash.in  bluealsa-handsfree-audio.service.in  bluealsa-handsfree-control.bash.in  bluealsa-handsfree-control.service.in  bluealsa-handsfree-control.socket.in  bluealsa-handsfree.in  bluealsa-simple-agent.bash.in  bluealsa-simple-agent.service.in  bluealsa-simple-pairable.service.in  meson.build  meson_options.txt
